--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -26,6 +26,24 @@ p {
   color: gray;
 }
 
+video {
+  display: block;
+  margin: 0 auto;
+}
+
+img {
+  display: block;
+  margin: 0 auto;
+}
+
+.phone-vid {
+  margin-top: 20px;
+}
+
+.cellphone {
+  margin-top: 20px;
+}
+
 footer {
   text-align: right;
 }
